[project]
name = "content_creators"
version = "0.1.0"
description = "Create content for social media using CrewAI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[tools]>=0.95.0",
    "google-genai>=1.9.0",
    "a2a-samples @ git+https://github.com/google/A2A.git@main#subdirectory=samples/python",

]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
include = [ "content_creators" ]
exclude = [ "__pycache__", "*.pyc", ".pytest_cache", ".ruff_cache",]

[project.scripts]
serve_a2a = "content_creators.__main__:main"
